include_directories(${OpenSim_SOURCE_DIR}
                    ${OpenSim_SOURCE_DIR}/Vendors)
					
if(BUILD_TESTING)
    add_subdirectory(PredSim)
    add_subdirectory(PredSim_pp)
    add_subdirectory(PredSim_SSCM)
    add_subdirectory(PredSim_SSCM_pp)
    add_subdirectory(TrackSim_1)
    add_subdirectory(TrackSim_2)
    add_subdirectory(PredSimProsthesis)
    add_subdirectory(PredSimProsthesis_pp)
    add_subdirectory(PredSim_2D)
    add_subdirectory(PredSim_2D_pp)
    add_subdirectory(Pendulum_2dofs)
    add_subdirectory(Pendulum_3dofs)
    add_subdirectory(Pendulum_4dofs)
    add_subdirectory(Pendulum_5dofs)
    add_subdirectory(Pendulum_6dofs)
    add_subdirectory(Pendulum_7dofs)
    add_subdirectory(Pendulum_8dofs)
    add_subdirectory(Pendulum_9dofs)
    add_subdirectory(Pendulum_10dofs)
	add_subdirectory(SimExo_2D)
	add_subdirectory(SimExo_2D_pp)
	add_subdirectory(SimExo_mtp_2D)
	add_subdirectory(SimExo_mtp_2D_pp)
	add_subdirectory(ExportModels)
	add_subdirectory(SimExo_3D)
	add_subdirectory(SimExo_3D_pp)
	add_subdirectory(PredSim_mtp_cm1)
	add_subdirectory(PredSim_mtp_pp_cm1)
	add_subdirectory(SimExo_3D_Pog_s1)
	add_subdirectory(SimExo_3D_Pog_s1_pp)
	add_subdirectory(PredSim_3D_Pog_s1)
	add_subdirectory(PredSim_3D_Pog_s1_pp)
	add_subdirectory(SimExo_3D_Pog_s1_mtp)
	add_subdirectory(SimExo_3D_Pog_s1_mtp_pp)
	add_subdirectory(PredSim_3D_Pog_s1_mtp)
	add_subdirectory(PredSim_3D_Pog_s1_mtp_pp)
	add_subdirectory(SimExo_2D_Pog_s1_mtp)
	add_subdirectory(SimExo_2D_Pog_s1_mtp_pp)
	add_subdirectory(PredSim_2D_Pog_s1_mtp)
	add_subdirectory(PredSim_2D_Pog_s1_mtp_pp)
	add_subdirectory(PredSim_3D_GRF)

endif()



