include_directories(${OpenSim_SOURCE_DIR}
                    ${OpenSim_SOURCE_DIR}/Vendors)
					
if(BUILD_TESTING)
    add_subdirectory(PredSim)
    add_subdirectory(PredSim_pp)
    add_subdirectory(PredSim_SSCM)
    add_subdirectory(PredSim_SSCM_pp)
    add_subdirectory(TrackSim_1)
    add_subdirectory(TrackSim_2)
    add_subdirectory(PredSimProsthesis)
    add_subdirectory(PredSimProsthesis_pp)
    add_subdirectory(PredSim_2D)
    add_subdirectory(PredSim_2D_pp)
    add_subdirectory(Pendulum_2dofs)
    add_subdirectory(Pendulum_3dofs)
    add_subdirectory(Pendulum_4dofs)
    add_subdirectory(Pendulum_5dofs)
    add_subdirectory(Pendulum_6dofs)
    add_subdirectory(Pendulum_7dofs)
    add_subdirectory(Pendulum_8dofs)
    add_subdirectory(Pendulum_9dofs)
    add_subdirectory(Pendulum_10dofs)
	add_subdirectory(SimExo_2D)
	add_subdirectory(SimExo_2D_pp)
	add_subdirectory(SimExo_mtp_2D)
	add_subdirectory(SimExo_mtp_2D_pp)
	add_subdirectory(ExportModels)
	add_subdirectory(SimExo_3D)
	add_subdirectory(SimExo_3D_pp)
	add_subdirectory(PredSim_mtp_cm1)
	add_subdirectory(PredSim_mtp_pp_cm1)
	add_subdirectory(SimExo_3D_Pog_s1)
	add_subdirectory(SimExo_3D_Pog_s1_pp)
	add_subdirectory(PredSim_3D_Pog_s1)
	add_subdirectory(PredSim_3D_Pog_s1_pp)
	add_subdirectory(SimExo_3D_Pog_s1_mtp)
	add_subdirectory(SimExo_3D_Pog_s1_mtp_pp)
	add_subdirectory(PredSim_3D_Pog_s1_mtp)
	add_subdirectory(PredSim_3D_Pog_s1_mtp_pp)
	add_subdirectory(SimExo_2D_Pog_s1_mtp)
	add_subdirectory(SimExo_2D_Pog_s1_mtp_pp)
	add_subdirectory(PredSim_2D_Pog_s1_mtp)
	add_subdirectory(PredSim_2D_Pog_s1_mtp_pp)
	add_subdirectory(PredSim_3D_GRF)
	add_subdirectory(SimExo_3D_talus)
	add_subdirectory(DebugCode)
	add_subdirectory(SimExo_3D_talus_out)
	add_subdirectory(SimExo_3D_ExportAll)
	add_subdirectory(SimpleExample_Contact)
	add_subdirectory(subject1_2D_3cs_ss3)
	add_subdirectory(subject1_2D_3cs_ss3_pp)
	add_subdirectory(PredSim_2D_Contact3)
	add_subdirectory(PredSim_2D_Contact3_pp)
	add_subdirectory(Geyer_2D)
	add_subdirectory(Geyer_2D_pp)
	add_subdirectory(Example_AutomatedCreation)
	add_subdirectory(Example_CreateDLL)
	add_subdirectory(Example_CreateDLL2)
	add_subdirectory(Browning_2008_Femur2)
	add_subdirectory(Browning_2008_Femur4)
	add_subdirectory(Browning_2008_Femur8)
	add_subdirectory(Browning_2008_Foot2)
	add_subdirectory(Browning_2008_Foot4)
	add_subdirectory(Browning_2008_Pelvis12)
	add_subdirectory(Browning_2008_Pelvis16)
	add_subdirectory(Browning_2008_Pelvis4)
	add_subdirectory(Browning_2008_Pelvis8)
	add_subdirectory(Browning_2008_Reference)
	add_subdirectory(Browning_2008_Tibia2)
	add_subdirectory(Browning_2008_Tibia4)
	add_subdirectory(Browning_2008_pp)
	add_subdirectory(Example_CreateDLL2_Debug)
	add_subdirectory(Browning_2008_temp)
	add_subdirectory(Example_CreateDLL3_Debug)
	add_subdirectory(TrackSim_Gait92)
	add_subdirectory(TrackSim_Subject1)
	add_subdirectory(TrackSim_Subject1_pp)
	add_subdirectory(TrackSim_Subject1_Fonly)
	add_subdirectory(ID_Subject1)
	add_subdirectory(Analyse_Subject1_pp)
endif()
