include_directories(${OpenSim_SOURCE_DIR}
                    ${OpenSim_SOURCE_DIR}/Vendors)
					
if(BUILD_TESTING)
	add_subdirectory(PredSim_subject1_exe)
    add_subdirectory(PredSim_CE_2D_4G_noAD_exe)
    add_subdirectory(TrackSim_CE_noAD_exe)
    add_subdirectory(TrackSim_subject1_exe_1)
    add_subdirectory(TrackSim_subject1_exe_2)
    add_subdirectory(TrackSim_subject1_exe_1a)
    add_subdirectory(TrackSim_subject1_exe_2a)
    add_subdirectory(TrackSim_subject1_exe_1a_6cs)
    add_subdirectory(TrackSim_subject1_exe_2a_6cs)
    add_subdirectory(PredSim_subject1_exe_6cs_cm2)
    add_subdirectory(PredSim_subject1_exe_6cs)
    add_subdirectory(TrackSim_subject1_exe_2b_6cs)
    add_subdirectory(PredSim_subject1_exe_6cs_cm3)
    add_subdirectory(TrackSim_s1_1a_6cs_mtp)
    add_subdirectory(TrackSim_s1_2b_6cs_mtp)
    add_subdirectory(PredSim_s1_6cs_cm4_mtp)
    add_subdirectory(PredSim_s1_6cs_cons)
    add_subdirectory(PredSim_s1_6cs_const)
    add_subdirectory(TrackSim_EF)
    add_subdirectory(TrackSim_s1_6cs)
    add_subdirectory(PredSim_s1_6cs_const_cm3)
    add_subdirectory(PredSim_s1_2D)
    add_subdirectory(Pendulum_Gil)
    add_subdirectory(PredSim_s1_6cs_const_noGRF)
    add_subdirectory(PredSim_s1_2D_noGRF)
    add_subdirectory(PredSim_s1_6cs_const_noGRF_cm4)
    add_subdirectory(PredSim_s1_6cs_const_cm4)
    add_subdirectory(PredSim_s1_6cs_const_pro)
    add_subdirectory(PredSim_s1_6cs_const_noGRF_pro)
    add_subdirectory(PredSim_s1_2D_noGRF_noTrunk)
    add_subdirectory(PredSim_s1_2D_noTrunk)
    add_subdirectory(PredSim_s1_6cs_const_pro_calcn)
    add_subdirectory(PredSim)
    add_subdirectory(PredSim_pp)
    add_subdirectory(PredSim_SSCM)
    add_subdirectory(TrackSim_1)
    add_subdirectory(TrackSim_2)
    add_subdirectory(PredSimProsthesis)
    add_subdirectory(Pendulum2dof)
    add_subdirectory(Pendulum3dof)
    add_subdirectory(Pendulum4dof)
    add_subdirectory(Pendulum5dof)
    add_subdirectory(Pendulum6dof)
    add_subdirectory(Pendulum7dof)
    add_subdirectory(Pendulum8dof)
    add_subdirectory(Pendulum9dof)
    add_subdirectory(Pendulum10dof)
    add_subdirectory(TrackSim_EF_1)
    add_subdirectory(TrackSim_EF_2)
    add_subdirectory(TrackSim_EF_6cs)
    add_subdirectory(PredSim_EF_SSCM1)
    add_subdirectory(PredSim_EF_SSCM1_pp)
    add_subdirectory(TrackSim_EF_1_4cs)
    add_subdirectory(TrackSim_EF_2_4cs)
    add_subdirectory(TrackSim_EF_4cs)
    add_subdirectory(PredSim_EF_SSCM1_mH)
    add_subdirectory(EchoCpp)
    add_subdirectory(TrackSim_EF_SSCM1)
    add_subdirectory(TrackSim_EF_SSCM1_noTrunk)
    add_subdirectory(TrackSim_EF_VS_SSCM1_noTrunk)
    add_subdirectory(TrackSim_OCpre_1_4cs)
    add_subdirectory(TrackSim_OCpre_2_4cs)
    add_subdirectory(TrackSim_EF_SSCM1_noTrunk_pos)    
    add_subdirectory(TrackSim_EF_SSCM1_pos) 
endif()



