set(TEST_TARGET Browning_2008_Femur2)
project(${TEST_TARGET})
add_library(${TEST_TARGET} SHARED foo_jac.c)
install(TARGETS ${TEST_TARGET}
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
				GROUP_READ GROUP_WRITE GROUP_EXECUTE
				WORLD_READ WORLD_EXECUTE
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
	RUNTIME DESTINATION bin
	)
