cmake_minimum_required (VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)

set(TEST_TARGET SimExo_mtp_2D)
project(${TEST_TARGET})

add_library(${TEST_TARGET} SHARED foo_jac.c)
install(TARGETS ${TEST_TARGET}
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE 
				GROUP_READ GROUP_WRITE GROUP_EXECUTE 
				WORLD_READ WORLD_EXECUTE
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
	RUNTIME DESTINATION bin
	)
		